[workspace]
resolver = '2'
members = [
    'pmb',
    'pmb-util',
    'pmb-macros',
    'backend-gl',
    'backend-wgpu',
]

[workspace.dependencies]
powdermilk-biscuits = { path = 'pmb' }
pmb-macros = { path = 'pmb-macros' }

log = '0.4.17'
bincode = '2.0.0-rc.1'
flate2 = '1.0.24'
bytemuck = { version = '*', features = ['derive'] }
serde = { version = '1.0.144', features = ['derive'] }
ron = '0.8.0'
slotmap = '1.0.6'
gumdrop = '0.8.1'
env_logger = '0.9.0'
glam = '0.21.2'
dirs = '4.0.0'
kdl = '4.5.0'
once_cell = '1.14.0'
whoami = '1.2.3'
left-right = '0.11.5'
anyhow = '1.0.65'
paste = '1.0.9'
proc-macro2 = '1.0.42'
quote = '1.0.21'
syn = '1.0.101'
derive_builder = '0.11.2'
indexmap = '1.9.1'
wgpu = '0.13.1'
futures = '0.3.21'
smaa = '0.7.0'

lyon = { git = 'https://github.com/zphixon/lyon', branch = 'new-euclid' }
rfd = { git = 'https://github.com/zphixon/rfd', branch = 'yes-no-cancel' }
ezgl = { git = 'https://github.com/zphixon/ezgl' }

[workspace.dependencies.egui]
git = 'https://github.com/zphixon/egui'
branch = 'unadulterated'
package = 'egui'

[workspace.dependencies.winit]
git = 'https://github.com/zphixon/winit'
branch = 'pen-info2'
features = ['x11', 'serde']

[workspace.dependencies.egui-winit]
git = 'https://github.com/zphixon/egui'
branch = 'unadulterated'
package = 'egui-winit'

[workspace.dependencies.egui_glow]
git = 'https://github.com/zphixon/egui'
branch = 'unadulterated'
package = 'egui_glow'
features = [ 'winit' ]

[workspace.dependencies.egui-wgpu]
git = 'https://github.com/zphixon/egui'
branch = 'unadulterated'
package = 'egui-wgpu'
features = ['document-features']

[profile.dev]
incremental = true

[profile.release]
incremental = true
