[package]
name = 'backend-gl'
version = '0.1.0'
edition = '2021'
build = 'build.rs'

[features]
default = []
pmb-release = ['powdermilk-biscuits/pmb-release']

[dependencies]
env_logger = '0.9.0'
log = '*'
glam = '0.21.2'
powdermilk-biscuits = { path = '../pmb' }
derive-loop = { path = '../derive-loop' }
ezgl = { git = 'https://github.com/zphixon/ezgl' }

[dependencies.egui_glow]
git = 'https://github.com/zphixon/egui'
branch = 'unadulterated'
package = 'egui_glow'
features = [ 'winit' ]

[target.'cfg(windows)'.dependencies.winit]
git = 'https://github.com/zphixon/winit'
branch = 'pen-info2'

[target.'cfg(unix)'.dependencies.winit]
git = 'https://github.com/zphixon/winit'
branch = 'pen-info2'
features = ['x11']
