[package]
name = 'backend-gl'
version = '0.1.0'
rust-version = '1.64.0'
edition = '2021'
build = 'build.rs'

[features]
default = []
pmb-release = ['powdermilk-biscuits/pmb-release']

[dependencies]
env_logger.workspace = true
log.workspace = true
glam.workspace = true

ezgl = { git = 'https://github.com/zphixon/ezgl' }

powdermilk-biscuits = { path = '../pmb' }
pmb-macros = { path = '../pmb-macros' }

[dependencies.egui_glow]
git = 'https://github.com/zphixon/egui'
branch = 'unadulterated'
package = 'egui_glow'
features = [ 'winit' ]
