[package]
name = 'backend-gl'
version = '0.1.0'
rust-version = '1.64.0'
edition = '2021'
build = 'build.rs'

[features]
default = []
pmb-release = ['powdermilk-biscuits/pmb-release']

[dependencies]
env_logger.workspace = true
log.workspace = true
glam.workspace = true
ezgl.workspace = true
egui_glow.workspace = true
powdermilk-biscuits.workspace = true
