[package]
name = 'backend-wgpu'
version = '0.1.0'
edition = '2021'
build = 'build.rs'

[features]
default = []
pmb-release = ['powdermilk-biscuits/pmb-release']

[dependencies]
env_logger = '0.9.0'
log = '*'
glam = { version = '0.21.2', features = ['bytemuck'] }
wgpu = '0.13.1'
futures = '0.3.21'
powdermilk-biscuits = { path = '../pmb' }
derive-loop = { path = '../derive-loop' }
smaa = '0.7.0'

[dependencies.egui-winit]
git = 'https://github.com/zphixon/egui'
branch = 'unadulterated'
package = 'egui-winit'

[dependencies.egui-wgpu]
git = 'https://github.com/zphixon/egui'
branch = 'unadulterated'
package = 'egui-wgpu'
features = ['document-features']
