[package]
name = 'backend-wgpu'
version = '0.1.0'
rust-version = '1.64.0'
edition = '2021'
build = 'build.rs'

[features]
default = []
pmb-release = ['powdermilk-biscuits/pmb-release']

[dependencies]
env_logger.workspace = true
log.workspace = true
glam.workspace = true

wgpu = '0.13.1'
futures = '0.3.21'
smaa = '0.7.0'

powdermilk-biscuits = { path = '../pmb' }
derive-loop = { path = '../derive-loop' }

[dependencies.egui-winit]
git = 'https://github.com/zphixon/egui'
branch = 'unadulterated'
package = 'egui-winit'

[dependencies.egui-wgpu]
git = 'https://github.com/zphixon/egui'
branch = 'unadulterated'
package = 'egui-wgpu'
features = ['document-features']
