[package]
name = 'backend-wgpu'
version = '0.1.0'
rust-version = '1.64.0'
edition = '2021'
build = 'build.rs'

[features]
default = []
pmb-release = ['powdermilk-biscuits/pmb-release']

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
glam.workspace = true
wgpu.workspace = true
futures.workspace = true
smaa.workspace = true
powdermilk-biscuits.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true
