[package]
name = 'pmb-femtovg'
version = '0.1.0'
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = '0.9.0'
log = '*'
powdermilk-biscuits = { path = '../pmb' }
femtovg = { git = 'https://github.com/zphixon/femtovg', branch = 'my-glutin' }

[target.'cfg(windows)'.dependencies.glutin]
git = 'https://github.com/zphixon/glutin'
branch = 'my-winit'
default-features = false

[target.'cfg(unix)'.dependencies.glutin]
git = 'https://github.com/zphixon/glutin'
branch = 'my-winit'
default-features = false
features = ['wayland', 'x11']
