[package]
name = 'pmb-gl'
version = '0.1.0'
edition = '2021'
build = 'build.rs'

[features]
default = []
pmb-release = ['powdermilk-biscuits/pmb-release']

[dependencies]
env_logger = '0.9.0'
log = '*'
image = { version = '0.24.2', default-features = false, features = ['png'] }
glow = '0.11.2'
glam = '0.21.2'
powdermilk-biscuits = { path = '../pmb' }
derive-pmb-loop = { path = '../derive-pmb-loop' }

[target.'cfg(windows)'.dependencies.glutin]
git = 'https://github.com/zphixon/glutin'
branch = 'my-winit'
default-features = false

[target.'cfg(unix)'.dependencies.glutin]
git = 'https://github.com/zphixon/glutin'
branch = 'my-winit'
default-features = false
features = ['wayland', 'x11']
