[package]
name = 'pmb-piet'
version = '0.1.0'
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = '0.9.0'
log = '*'
powdermilk-biscuits = { path = '../pmb' }
bytemuck = '1.12.1'

# TODO use glutin
winit = { git = 'https://github.com/zphixon/winit', branch = 'pen-info2' }
softbuffer = { git = 'https://github.com/john01dav/softbuffer' }

[dependencies.piet-common]
git = 'https://github.com/linebender/piet'
rev = '45ddf3a8229c5384c3119a7c13b8ceb9b124cefb'
package = 'piet-common'
