[package]
name = 'pmb-util'
version = '0.1.0'
rust-version = '1.64.0'
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gumdrop.workspace = true
anyhow = '1.0.65'
paste = '1.0.9'
powdermilk-biscuits = { path = '../pmb' }
