[package]
name = 'powdermilk-biscuits'
version = '0.1.1'
edition = '2021'
rust-version = '1.62.1'

[features]
default = []
pmb-release = []

[dependencies]
log = '0.4.17'
derive-disk = { path = '../derive-disk' }
bincode = '2.0.0-rc.1'
flate2 = '1.0.24'
rfd = { git = 'https://github.com/zphixon/rfd', branch = 'yes-no-cancel' }
bytemuck = { version = '*', features = ['derive'] }
lyon = { git = 'https://github.com/zphixon/lyon', branch = 'new-euclid' }
serde = { version = '1.0.144', features = ['derive'] }
ron = '0.8.0'
slotmap = '1.0.6'
gumdrop = '0.8.1'
dirs = '4.0.0'
kdl = '4.5.0'
once_cell = '1.14.0'
whoami = '1.2.3'
paste = '1.0.9'
left-right = '0.11.5'

[dependencies.egui]
git = 'https://github.com/zphixon/egui'
branch = 'unadulterated'
package = 'egui'

[target.'cfg(windows)'.dependencies.winit]
git = 'https://github.com/zphixon/winit'
branch = 'pen-info2'
features = ['serde']

[target.'cfg(unix)'.dependencies.winit]
git = 'https://github.com/zphixon/winit'
branch = 'pen-info2'
features = ['x11', 'serde']
