[package]
name = 'powdermilk-biscuits'
version = '0.1.1'
rust-version = '1.64.0'
edition = '2021'

[features]
default = []
pmb-release = []

[dependencies]
log.workspace = true
bincode.workspace = true
flate2.workspace = true
bytemuck.workspace = true
serde.workspace = true
ron.workspace = true
slotmap.workspace = true
gumdrop.workspace = true

dirs = '4.0.0'
kdl = '4.5.0'
once_cell = '1.14.0'
whoami = '1.2.3'
paste = '1.0.9'
left-right = '0.11.5'

derive-disk = { path = '../derive-disk' }

lyon = { git = 'https://github.com/zphixon/lyon', branch = 'new-euclid' }
rfd = { git = 'https://github.com/zphixon/rfd', branch = 'yes-no-cancel' }

[dependencies.egui]
git = 'https://github.com/zphixon/egui'
branch = 'unadulterated'
package = 'egui'

[target.'cfg(windows)'.dependencies.winit]
git = 'https://github.com/zphixon/winit'
branch = 'pen-info2'
features = ['serde']

[target.'cfg(unix)'.dependencies.winit]
git = 'https://github.com/zphixon/winit'
branch = 'pen-info2'
features = ['x11', 'serde']
