[package]
name = 'powdermilk-biscuits'
version = '0.1.1'
rust-version = '1.64.0'
edition = '2021'

[features]
default = []
pmb-release = []

[dependencies]
env_logger.workspace = true
log.workspace = true
bincode.workspace = true
flate2.workspace = true
bytemuck.workspace = true
serde.workspace = true
ron.workspace = true
slotmap.workspace = true
gumdrop.workspace = true
dirs.workspace = true
kdl.workspace = true
once_cell.workspace = true
whoami.workspace = true
paste.workspace = true
left-right.workspace = true
pmb-macros.workspace = true
lyon.workspace = true
rfd.workspace = true
egui.workspace = true
winit.workspace = true
